<resources>
    <string name="app_name">Ubre</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="ride_history">Ride history</string>
    <string name="my_favourites">My favorites</string>
    <string name="ride_details_title">Ride details</string>
    <string name="reorder">Reorder</string>
    <string name="account_settings">Account settings</string>
    <string name="reports">Reports</string>
    <string name="report_filters">Filters</string>
    <string name="report_date_from">Date from</string>
    <string name="report_date_to">Date to</string>
    <string name="report_scope">Scope</string>
    <string name="report_user_email">User email</string>
    <string name="report_generate">Generate report</string>
    <string name="report_summary">Summary</string>
    <string name="report_total_rides">Total rides</string>
    <string name="report_total_distance">Total distance</string>
    <string name="report_total_money">Total money</string>
    <string name="report_avg_rides">Avg rides/day</string>
    <string name="report_avg_distance">Avg distance/day</string>
    <string name="report_avg_money">Avg money/day</string>
    <string name="report_daily_charts">Daily charts</string>
    <string name="report_chart_rides">Rides per day</string>
    <string name="report_chart_distance">Distance per day (km)</string>
    <string name="report_chart_money">Money per day</string>
    <string name="report_no_daily_data">No daily data in this range.</string>
    <string name="report_money_earned">Earned</string>
    <string name="report_money_spent">Spent</string>
    <string name="log_out">Log out</string>
    <string name="active_rides">Active rides</string>
    <string name="price_adjustment">Price adjustment</string>
    <string name="register_a_driver">Register a driver</string>
    <string name="panic_notifications">Panic notifications</string>
    <string name="log_in">Log in</string>
    <string name="register">Register</string>
    <string name="name_surname">Name Surname</string>
    <string name="password">Password</string>
    <string name="change_password">Change password</string>
    <string name="personal_information">Personal information</string>
    <string name="name">Name</string>
    <string name="surname">Surname</string>
    <string name="residential_address">Residential address</string>
    <string name="phone_number">Phone number</string>
    <string name="save">Save</string>
    <string name="discard">Discard</string>
    <string name="account_information">Account information</string>
    <string name="email">Email</string>
    <string name="mock_password">********</string>
    <string name="new_password">New password\n</string>
    <string name="confirm_password">Confirm password</string>
    <string name="password_mismatch_error">Passwords do not match</string>
    <string name="view_vehicle_information">View vehicle information</string>
    <string name="vehicle_information">Vehicle information</string>
    <string name="vehicle_model">Vehicle model</string>
    <string name="vehicle_type">Vehicle type\n</string>
    <string name="vehicle_type_standard">Standard</string>
    <string name="vehicle_type_luxury">Luxury</string>
    <string name="vehicle_type_van">Van</string>
    <string name="license_plates">License plates</string>
    <string name="number_of_seats">Number of seats</string>
    <string name="baby_friendly">Baby friendly\n</string>
    <string name="pet_friendly">Pet friendly\n</string>
    <string name="baby_friendly_option">Baby friendly</string>
    <string name="pet_friendly_option">Pet friendly</string>
    <string name="ride_options">Ride options</string>
    <string name="statistics">Statistics</string>
    <string name="profile_changes">Profile changes</string>
    <string name="block_users">Block users</string>
    <string name="account">Account</string>
    <string name="sign_up">Sign up</string>
    <string name="continue_as_guest">Continue as Guest</string>
    <string name="email_placeholder">Enter your email</string>
    <string name="password_placeholder">Enter your password</string>
    <string name="profile_picture">Profile picture</string>
    <string name="first_name">First name</string>
    <string name="first_name_placeholder">Enter your first name</string>
    <string name="last_name">Last name\t</string>
    <string name="last_name_placeholder">Enter your last name</string>
    <string name="address_placeholder">Enter your residential address</string>
    <string name="phone_placeholder">Enter your phone number</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="reset_password">Reset Password</string>
    <string name="enter_your_email_address_and_we_will_send_you_a_link_to_reset_your_password">Enter your email address and we will send you a link to reset your password.</string>
    <string name="send_reset_link">Send Reset Link</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="remember_me">Remember me</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="price_per_km">Price per km</string>
    <string name="base_price_per_type">Base price per type</string>
    <string name="standard">Standard</string>
    <string name="luxury">Luxury</string>
    <string name="van">Van</string>
    <string name="driver_photo">Driver photo</string>
    <string name="attach_photo">Attach photo</string>
    <string name="register_driver">Register driver</string>
    <string name="cancel">Cancel</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="no_panic_notifications">No panic notifications</string>
    <string name="scheduled_rides">Scheduled rides</string>
</resources>
