<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/surface"
    android:padding="24dp"
    android:scrollbars="none">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:layout_marginBottom="32dp"
            style="@style/HeaderRow">

            <ImageView
                android:id="@+id/btn_back"
                android:src="@drawable/ic_back"
                style="@style/HeaderBackIcon"
                android:layout_marginEnd="12dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sign_up"
                android:includeFontPadding="false"
                style="@style/HeaderTitle" />
        </LinearLayout>

        <ImageView
            android:id="@+id/ivProfilePic"
            style="@style/Avatar"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/img_default_avatar"
            android:layout_gravity="center"
            android:scaleType="centerCrop"
            android:contentDescription="@string/profile_picture"
            android:layout_marginBottom="24dp"/>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/first_name"
            android:textColor="@color/primary_dark"
            android:layout_marginBottom="8dp"
            android:fontFamily="@font/poppins_medium" />

        <com.google.android.material.textfield.TextInputLayout
            style="@style/InputBoxLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etFirstName"
                style="@style/InputBoxEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/first_name_placeholder"/>
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/last_name"
            android:textColor="@color/primary_dark"
            android:layout_marginBottom="8dp"
            android:fontFamily="@font/poppins_medium" />

        <com.google.android.material.textfield.TextInputLayout
            style="@style/InputBoxLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etLastName"
                style="@style/InputBoxEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/last_name_placeholder"/>
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:textColor="@color/primary_dark"
            android:layout_marginBottom="8dp"
            android:fontFamily="@font/poppins_medium" />

        <com.google.android.material.textfield.TextInputLayout
            style="@style/InputBoxLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etEmail"
                style="@style/InputBoxEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email_placeholder"
                android:inputType="textEmailAddress"/>
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/password"
            android:textColor="@color/primary_dark"
            android:layout_marginBottom="8dp"
            android:fontFamily="@font/poppins_medium" />

        <com.google.android.material.textfield.TextInputLayout
            style="@style/InputBoxLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:passwordToggleEnabled="true"
            android:layout_marginBottom="16dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etPassword"
                style="@style/InputBoxEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password_placeholder"
                android:inputType="textPassword"/>
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/confirm_password"
            android:textColor="@color/primary_dark"
            android:layout_marginBottom="8dp"
            android:fontFamily="@font/poppins_medium" />

        <com.google.android.material.textfield.TextInputLayout
            style="@style/InputBoxLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:passwordToggleEnabled="true"
            android:layout_marginBottom="24dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etConfirmPassword"
                style="@style/InputBoxEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/confirm_password"
                android:inputType="textPassword"/>
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/residential_address"
            android:textColor="@color/primary_dark"
            android:layout_marginBottom="8dp"
            android:fontFamily="@font/poppins_medium" />

        <com.google.android.material.textfield.TextInputLayout
            style="@style/InputBoxLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etAddress"
                style="@style/InputBoxEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/address_placeholder"/>
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/phone_number"
            android:textColor="@color/primary_dark"
            android:layout_marginBottom="8dp"
            android:fontFamily="@font/poppins_medium" />

        <com.google.android.material.textfield.TextInputLayout
            style="@style/InputBoxLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etPhone"
                style="@style/InputBoxEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/phone_placeholder"
                android:inputType="phone"/>
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btnRegisterSubmit"
            style="@style/BtnFilled"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:text="@string/sign_up"
            android:layout_marginBottom="24dp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/already_have_an_account"
                android:textColor="@color/text_primary" />

            <TextView
                android:id="@+id/tvLogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/log_in"
                android:textColor="@color/primary_dark"
                android:fontFamily="@font/poppins_medium"
                android:layout_marginStart="4dp"/>
        </LinearLayout>

    </LinearLayout>
</ScrollView>
