<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="24dp">
    <TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/reset_password"
    android:textSize="20sp"
    android:fontFamily="@font/poppins_regular"
    android:textColor="@color/primary_dark"
    android:layout_marginBottom="8dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/enter_your_email_address_and_we_will_send_you_a_link_to_reset_your_password"
        android:textColor="@color/text_primary"
        android:textSize="14sp"
        android:layout_marginBottom="24dp"/>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/InputBoxLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etResetEmail"
            style="@style/InputBoxEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email_placeholder"
            android:inputType="textEmailAddress" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btnSendResetLink"
        style="@style/BtnFilled"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:text="@string/send_reset_link" />

</LinearLayout>