<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- main difference is that driver has 2 more fields, and thats
    how much time he has spent and view vehicle information filed -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <!-- TOP -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            style="@style/HeaderRow">

            <ImageView
                android:id="@+id/btn_back"
                android:src="@drawable/ic_back"
                style="@style/HeaderBackIcon"
                android:layout_marginEnd="12dp"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/account_settings"
                android:includeFontPadding="false"
                style="@style/HeaderTitle"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="10dp">

            <View
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_weight="1"
                android:background="@color/neutral_dark_gray"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="12dp"
                android:text="@string/account_information"
                style="@style/SectionTitle"/>

            <View
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_weight="1"
                android:background="@color/neutral_dark_gray"/>

        </LinearLayout>

        <ImageView
            android:id="@+id/img_avatar"
            style="@style/Avatar"
            android:layout_width="138dp"
            android:layout_height="138dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="16dp"
            android:scaleType="centerCrop"
            android:src="@drawable/img_default_avatar" />

        <!-- Email (readonly) -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/InputBoxLayout"
            android:layout_marginTop="16dp"
            android:hint="@string/email">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_email"
                style="@style/InputBoxEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:enabled="false" />
        </com.google.android.material.textfield.TextInputLayout>

        <!-- Password (readonly) -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:hint="@string/password"
            app:endIconMode="password_toggle"
            style="@style/InputBoxLayout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:enabled="false"
                android:inputType="textPassword"
                android:text="@string/mock_password"
                style="@style/InputBoxEditText"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/btn_change_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:paddingLeft="16dp"
            android:text="@string/change_password"
            android:textColor="#1E5EFF" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="10dp">

            <View
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_weight="1"
                android:background="@color/neutral_dark_gray"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="12dp"
                android:text="@string/statistics"
                style="@style/SectionTitle"/>

            <View
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_weight="1"
                android:background="@color/neutral_dark_gray"/>

        </LinearLayout>

        <!-- WIP -->
        <LinearLayout
            android:id="@+id/stats_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="10dp">

            <View
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_weight="1"
                android:background="@color/neutral_dark_gray"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="12dp"
                android:text="@string/personal_information"
                style="@style/SectionTitle"/>

            <View
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_weight="1"
                android:background="@color/neutral_dark_gray"/>

        </LinearLayout>


        <!-- Required: Name -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_name"
            style="@style/InputBoxLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:hint="@string/name">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_name"
                style="@style/InputBoxEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>

        <!-- Required: Surname -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_surname"
            style="@style/InputBoxLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:hint="@string/surname">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_surname"
                style="@style/InputBoxEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>

        <!-- Address (optional) -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_address"
            style="@style/InputBoxLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:hint="@string/residential_address">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_address"
                style="@style/InputBoxEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>

        <!-- Required: Phone -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_phone"
            style="@style/InputBoxLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:hint="@string/phone_number">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_phone"
                style="@style/InputBoxEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="phone" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/btn_view_vehicle_information"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:paddingLeft="16dp"
            android:text="@string/view_vehicle_information"
            android:textColor="#1E5EFF" />

        <Button
            android:id="@+id/btn_save"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="18dp"
            android:text="@string/save"
            android:textAllCaps="false"
            style="@style/BtnFilled" />

        <Button
            android:id="@+id/btn_discard"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="10dp"
            android:text="@string/discard"
            android:textAllCaps="false"
            style="@style/BtnOutlined"/>

    </LinearLayout>
</ScrollView>
